index.css
* {
  margin: 0;
  padding: 0;
  font-family: 'Merriweather Sans', sans-serif;
}

:root {
  --dark-bg: rgb(17, 30, 82);
  --dark-text: rgb(255, 255, 255);
  --dark-card-text: rgb(46, 46, 46);
  --dark-toggle-bg: rgb(255, 255, 255);
  --dark-toggle-ball: rgb(255, 165, 0);
  --dark-submit: rgb(255, 65, 65);
  --dark-submit-hover: rgb(248, 97, 97);
  
  --light-bg: rgb(198, 230, 252);
  --light-text: rgb(46, 46, 46);
  --light-card-text: rgb(46, 46, 46);
  --light-toggle-bg: rgb(17, 30, 82);
  --light-toggle-ball: rgb(255, 165, 0);
  --light-submit: rgb(80, 211, 150);
  --light-submit-hover: rgb(135, 231, 186);
}

body.light {
  --bg-color: var(--light-bg);
  --text-color: var(--light-text);
  --card-text-color: var(--light-card-text);
  --toggle-bg-color: var(--light-toggle-bg);
  --toggle-ball-color: var(--light-toggle-ball);
  --submit-color: var(--light-submit);
  --submit-hover: var(--light-submit-hover);
  --submit-active: var(--light-submit);
}

body.dark {
  --bg-color: var(--dark-bg);
  --text-color: var(--dark-text);
  --card-text-color: var(--dark-card-text);
  --toggle-bg-color: var(--dark-toggle-bg);
  --toggle-ball-color: var(--dark-toggle-ball);
  --submit-color: var(--dark-submit);
  --submit-hover: var(--dark-submit-hover);
  --submit-active: var(--dark-submit);
}

body {
  background-color: var(--bg-color);
}

.app-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 6rem
}

.title {
  font-size: 3rem;
  text-align: center;
  color: var(--text-color);
  margin-bottom: 2rem;
}

.header {
  display: flex;
  gap: 2rem;
}

.checkbox {
  opacity: 0;
  position: absolute;
}

.checkbox:checked + .label .ball {
	transform: translateX(2rem);
}

.label {
	background-color: var(--toggle-bg-color);
	border-radius: 2rem;
	cursor: pointer;
	display: flex;
	align-items: center;
	justify-content: space-between;
  padding: .2rem;
	position: relative;
	height: 2rem;
	width: 4rem;
	transform: scale(1);
  margin-top: .6rem;
}

.ball {
  background-color: var(--toggle-ball-color);
	border-radius: 50%;
	position: absolute;
	top: .2rem;
	left: .2rem;
	height: 2rem;
	width: 2rem;
	transform: translateX(0px);
	transition: transform 0.2s linear;
}

.search {
  display: flex;
  justify-content: center;
}

.search-bar {
  border: none;
  border-bottom: .15rem solid var(--text-color);
  background-color: var(--bg-color);
  color: var(--text-color);
  outline: none;
  font-size: 2rem;
  margin-right: .5rem;
}

.submit {
  font-size: 1.5rem;
  color: var(--text-color);
  background-color: var(--submit-color);
  border: none;
  border-radius: .5rem;
  padding: .4rem;
}

.submit:hover {
  background-color: var(--submit-hover);
  cursor: pointer;
}

.submit:active {
  background-color: var(--submit-active);
}

.temp-type {
  position: absolute;
  opacity: 0;
}

.temp-label {
  height: 2rem;
  width: 2rem;
  background-color: white;
  position: relative;
}

.temp-check {
  width: fit-content;
  padding: .25rem;
  display: flex;
  margin: auto;
  margin-top: 1.1rem;
}

.temp-name {
  position: relative;
}

.temp-check .fahrenheit::after  {
  position: absolute;
  content: "Fahrenheit";
  font-size: 1.5rem;
  width: fit-content;
  padding: .25rem;
  border-radius: .2rem;
  top: 0;
  right: 5.5rem;
  background-color: var(--submit-color);
  color: var(--text-color);
}

.temp-check .fahrenheit:hover::after {
  background-color: var(--submit-hover);
}

.temp-check .fahrenheit:active::after {
  background-color: var(--submit-color);
}

.temp-check .celsius::after {
  position: absolute;
  content: "Celsius";
  font-size: 1.5rem;
  width: fit-content;
  padding: .25rem;
  border-radius: .2rem;
  top: 0;
  right: 7.86rem;
  background-color: var(--submit-color);
  color: var(--text-color);
}

.temp-check .celsius:hover::after {
  background-color: var(--submit-hover);
}

.temp-check .celsius:active::after {
  background-color: var(--submit-color);
}

.temp-check:hover {
  cursor: pointer;
}

.card-container {
  display: flex;
  justify-content: center;
  margin: auto;
  gap: 2rem;
  flex-wrap: wrap;
  max-width: 80%;
  margin-bottom: 2rem;
}

.card {
  margin-top: 4rem;
  border-radius: .75rem;
  background-color: white;
  padding: 1.5rem;
  min-width: 12rem;
  min-height: 15rem;
  max-height: 15rem;
  display: flex;
  flex-direction: column;
  box-shadow: -.3rem .3rem gray;
}

.city {
  color: var(--card-text-color);
  font-size: 1.25rem;
}

.day {
  color: rgb(131, 131, 131);
}

.temp {
  font-weight: bold;
  font-size: 4rem;
  position: relative;
}

.temp-letter {
  font-size: 2rem;
  position: absolute;
  top: .4rem;
}

.icon {
  font-size: 5rem;
}

.desc {
  font-size: 1.2rem;
  margin-top: 1.5rem;
}

@media screen and (max-width: 650px){
  .header {
    flex-direction: column;
  }

  .label {
    order: -1;
    position: absolute;
    top:0;
    right: 1rem;
  }

  .search {
    margin-right: 0;
    display: flex;
    margin: auto;
    flex-direction: column;
    width: 90%;
  }
  
  .search-bar {
    margin-bottom: 1rem;
    text-align: center;
  }

  .card-container{
    margin-top: 2rem;
    gap: 2rem;
  }

  .card {
    margin: auto;
  }

  .temp-check .fahrenheit::after {
    right: 2.8rem;
    top: -21.5rem;
  }

  .temp-check .celsius::after {
    right: 5.15rem;
  }
}

